<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"

        android:paddingBottom="32dp"
        tools:context=".ui.tvshow.detail.DetailTvShowActivity">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tv_genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tvStatus"
            style="@style/Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/status"
            app:layout_constraintTop_toBottomOf="@+id/status"
            tools:text="Released" />

        <TextView
            android:id="@+id/tvborder"
            style="@style/Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text=""
            app:drawableEndCompat="@drawable/ic_star"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageButton

            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/backbutton" />

        <ImageButton
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/btn_save"
            android:src="@drawable/ic_btn_save"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/button_save" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/detail_tv_show"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_poster"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintStart_toStartOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView

            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:background="@color/blue"
            android:contentDescription="@string/poster" />

        <TextView
            android:id="@+id/tv_tittle"
            style="@style/Heading1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_poster"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            tools:text="Behind Her Eyes" />

        <TextView
            android:id="@+id/tv_tagline"
            style="@style/Heading2"
            android:layout_width="0dp"            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_tittle"
            app:layout_constraintTop_toBottomOf="@+id/tv_tittle"
            tools:text="Tagline Film" />

        <TextView
            android:id="@+id/status"
            style="@style/Heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/status"
            app:layout_constraintStart_toStartOf="@+id/tvborder"
            app:layout_constraintTop_toBottomOf="@+id/tvborder" />

        <TextView
            android:id="@+id/textView5"
            style="@style/Heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@+id/tvStatus"
            app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

        <TextView
            android:id="@+id/tv_genre"
            style="@style/Heading2"
            android:layout_width="0dp"            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="43dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:text="Horror, Action, Thriller" />

        <TextView
            android:id="@+id/textView7"
            style="@style/Heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/total_episode"
            app:layout_constraintStart_toStartOf="@+id/tv_genre"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

        <TextView
            android:id="@+id/tvEpisodes"
            style="@style/Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:text="5" />

        <TextView
            android:id="@+id/textView9"
            style="@style/Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/episodes"
            app:layout_constraintStart_toEndOf="@+id/tvEpisodes"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView10"
            style="@style/Heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/story_line"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/tvStoryline"
            style="@style/Heading2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="43dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:text="@string/temp_storyline" />

        <TextView
            android:id="@+id/tv_star"
            style="@style/Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvborder"
            app:layout_constraintTop_toTopOf="@+id/tvborder"
            tools:text="100" />

        <TextView
            android:id="@+id/textView4"
            style="@style/Heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/vote_avarage"
            app:layout_constraintStart_toStartOf="@+id/tv_tagline"
            app:layout_constraintTop_toBottomOf="@+id/tv_tagline" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>