<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/movies"
    android:icon="@drawable/ic_movie"
    app:showAsAction="always"
    android:title="" />
    <item android:id="@+id/tv"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_tv"
        android:title="" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite"
        android:title=""
        app:showAsAction="always" />
</menu>